# freshflow_case

./: README.md  pyproject.toml  run.py
src/: Modelling.ipynb  Preprocess data.ipynb
src/api/: endpoints.py
src/data/prepared_data/: product_80028349.csv  product_80101923.csv  product_80317483.csv
src/models/: 80028349_encoder.sav  80028349_model.sav
src/prediction/: __init__.py  main.py
src/schemas/: __init__.py  requests.py
