[tool.poetry]
name = "freshflow_case"
version = "0.1.0"
description = ""
authors = ["kershov <ersh.andreich@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
statsmodels = "^0.13.5"
scikit-learn = "^1.2.0"
jupyter = "^1.0.0"
matplotlib = "^3.6.2"
seaborn = "^0.12.2"
fastapi = "^0.89.0"
pydantic = "^1.10.4"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
